--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 <body>
     <nav class="nav">
         <img src="img/logo.png" alt="" id="logo">
-        <h2>Tarefas - CRUD <p>by じゅ</p></h2>
+        <h2>Afazeres - CRUD <p>by じゅ</p></h2>
     </nav>
 
-    <form method="POST" enctype="multipart/form-data" onSubmit="salvarForm(); return false;" id="frmCrud">
+    <form method="POST" enctype="multipart/form-data" onSubmit="saveForm(); return false;" id="frmCrud">
     <section id=sctDado>
         <input id="id" type=hidden value="-1" name="id" />
-        <input id="task" type=text class="inputText" required placeholder="Digite a tarefa" name="task"/>
+        <input id="task" type=text class="inputText" required placeholder="Digite um Afazer" name="task"/>
         <input id="local" type=text class="inputText" placeholder="Informe local" name="dblocal"/>
-        <input id="time" type=number class="inputText" placeholder="Tempo em Horas" name="dbtime"/>
+        <input id="time" type=number class="inputText" placeholder="Hrs" min="1" step="1" max="10" name="dbtime"/>
         <select id="status" class="inputText" name="dbstatus" disabled="true">
             <option value="pendente">Nova</option>
             <option value="ok">Finalizada</option>
             <option value="fazendo">Começar</option>
-            <option value="parado">parar</option>
+            <option value="parado">Parar</option>
         </select>
     </section>
     <section id=sctButton>
@@ -50,7 +50,7 @@
                 </tr>
             </thead> 
             <tbody id="tbodyTask">      
-                <script type="text/javascript">carregarLista();</script>      
+                <script type="text/javascript">loadlist();</script>      
             </tbody>
         </table>
         <h5 id="msgPHP"></h5>
